23/01/2015: Add filter dialog on Hotellist. 	- Manager the filtering on "number of stars" basis.

--- a/KaassaMobile/res/values/strings.xml
+++ b/KaassaMobile/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">About</string>
     <string name="action_leaveusmessage">Leave us a message</string>
+    <string name="action_filter">Filter</string>
     <string name="aboutkaassa_value">Kaassa - About\n\nSurveillance in sub-saharan Africa for tourists, investors and students.\n\n- hotels with photos, available services and minimum cost of accommodation\n- companies and executives behind Africa\'s economic growth\n- secondary and advanced schools with high reputation and trainings provided</string>
 	<string name="AboutKaassa_label">About Kaassa</string>
     
