--- a/KaassaMobile/res/values/strings.xml
+++ b/KaassaMobile/res/values/strings.xml
@@ -17,6 +17,7 @@
 	<string name="AboutKaassa_dialog_title">Kaassa - About</string>
 	<string name="AboutKaassa_dialog_ok">OK</string>
 	<string name="AboutKaassa_dialog_message">Surveillance in sub-saharan Africa for tourists, investors and students./n- hotels with photos, available services and minimum cost of accommodation/n/n- companies and executives behind Africa\'s economic growth/n/n- secondary and advanced schools with high reputation and trainings provided</string>
+	<string name="displayHotelPhoto_value"> Display Photo</string>
 	
 	
     
