--- a/KaassaMobile/res/values/strings.xml
+++ b/KaassaMobile/res/values/strings.xml
@@ -7,16 +7,23 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">About</string>
     <string name="action_leaveusmessage">Leave us a message</string>
-    <string name="action_filter">Filter</string>
-    <string name="aboutkaassa_value">Kaassa - About\n\nSurveillance in sub-saharan Africa for tourists, investors and students.\n\n- hotels with photos, available services and minimum cost of accommodation\n- companies and executives behind Africa\'s economic growth\n- secondary and advanced schools with high reputation and trainings provided</string>
-	<string name="AboutKaassa_label">About Kaassa</string>
+    <string name="action_filter">Filter</string>	
+	<string name="MainActivity_radioButton_Hotel">Hotels</string>
+	<string name="MainActivity_radioButton_Company">Companies</string>
+	<string name="MainActivity_radioButton_Executive">Executives</string>
+	<string name="MainActivity_radioButton_School">Schools</string>
+	<string name="MainActivity_Button_Search">Search</string>
+	<string name="filtermenu_title">Filter Form</string>
 	<string name="filtermenu_country_textview_value">Country :</string>
 	<string name="filtermenu_city_textview_value">City :</string>
 	<string name="filtermenu_submit_button_value">Submit</string>
 	<string name="filtermenu_cancel_button_value">Cancel</string>
 	<string name="AboutKaassa_dialog_title">Kaassa - About</string>
 	<string name="AboutKaassa_dialog_ok">OK</string>
-	<string name="AboutKaassa_dialog_message">Surveillance in sub-saharan Africa for tourists, investors and students./n- hotels with photos, available services and minimum cost of accommodation/n/n- companies and executives behind Africa\'s economic growth/n/n- secondary and advanced schools with high reputation and trainings provided</string>
+	<string name="AboutKaassa_dialog_message">Surveillance in sub-saharan Africa for tourists, investors and students.\n\n- hotels with photos, available services and minimum cost of accommodation\n\n- companies and executives behind Africa\'s economic growth\n\n- secondary and advanced schools with high reputation and trainings provided</string>
+	<string name="HotelDetail_Textview_priceminLabel">From :</string>
+	<string name="HotelDetail_Textview_locationLabel">Location :</string>
+	<string name="HotelDetail_Textview_servicesListTitle">Available Services :</string>
 	<string name="displayHotelPhoto_value"> Display Photo</string>
 	
 	
